<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="fragment_root"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        tools:context=".auth_activity.SignInFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="username_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:lines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="password_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:lines="1"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/main_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/auth_sign_in"
                android:transitionName="main_button"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/later_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/auth_later"
                android:transitionName="later_button"
                android:layout_weight="1"/>

    </LinearLayout>

    <TextView
            android:id="@+id/to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/auth_sign_up_option"
            android:textSize="16sp"/>

</LinearLayout>
