<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:context=".auth_activity.SignUpFragment">

        <TextView
                android:id="@+id/title_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Регистрация"
                android:textAppearance="@style/AppTheme.Display1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="username_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_sign_up">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    android:lines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:transitionName="password_layout"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/username_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:lines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/main_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/auth_sign_up"
                android:transitionName="main_button"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/password_layout"
                app:layout_constraintStart_toStartOf="@+id/title_sign_up"
                app:layout_constraintEnd_toEndOf="@+id/title_sign_up" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/later_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Widget.ButtonSecondary"
                android:text="Позже"
                android:transitionName="later_button"
                android:layout_weight="0"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/main_button"
                app:layout_constraintTop_toTopOf="@+id/main_button"
                app:layout_constraintStart_toEndOf="parent" />

        <TextView
                android:id="@+id/to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_sign_in_option"
                android:textSize="16sp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/main_button"
                android:layout_marginTop="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
